# game_01_shared_class

./: CMakeLists.txt  conanfile.txt
game_01_shared_class/: CMakeLists.txt  serialization.hxx
shared_class/: serialization.hxx
test/: CMakeLists.txt  constant.hxx  main.cxx  test.cxx
